apps/kivo/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kivo
spec:
  template:
    spec:
      containers:
        - name: kivo
          image: 192.168.68.54:31834/kivo:0.1.2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kivo-mongodb
spec:
  template:
    spec:
      containers:
        - name: kivo-mongodb
