apps/kivo/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kivo-ingress
spec:
  rules:
    - host: kivo.imapps.production
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kivo
                port:
                  number: 3000
